# gitrs

./: .gitignore  Cargo.toml  README.md
src/: config.rs  error.rs  lib.rs  main.rs  subcommands.rs
src/core/: decoding.rs  encoding.rs  error.rs  fileio.rs  mod.rs  objects.rs  paths.rs
src/core/objects/: blob.rs  mod.rs  repo.rs  tests.rs
src/core/subcommand_functions/: init.rs  mod.rs  plumbing.rs
src/objects/: blob.rs  file_mode.rs  mod.rs  repo.rs  tests.rs
src/subcommand_functions/: init.rs  mod.rs  plumbing.rs
src/subcommands/: init.rs  init_helper.rs  mod.rs  plumbing.rs
src/utils/: fileio.rs  mod.rs  tests.rs
