[package]
name = "gitrs"
version = "0.0.2"
authors = ["QualityHammer <agingllama@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ascii = "1.0.0"
clap = "2.33.3"
flate2 = "1.0.19"
hex = "0.4.2"
sha-1 = "0.9.2"
